@@ -69,6 +69,9 @@ Release 2.7.3 - UNRELEASED
     MAPREDUCE-6580. Test failure: TestMRJobsWithProfiler.
     (Eric Badger via aajisaka)
 
+    MAPREDUCE-5817. Mappers get rescheduled on node transition even after all
+    reducers are completed. (Sangjin Lee via kasha)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
